--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
+cover_db
 META.yml
+MYMETA.yml
+MYMETA.json
 Makefile
-inc/
+blib
+inc
 pm_to_blib
-*~
+MANIFEST
+Makefile.old
+nytprof.out
+MANIFEST.bak
+*.sw[po]
